Testing Egg Timer Counter

--- a/src/test/resources/propertyFiles/EnvDevConfig.properties
+++ b/src/test/resources/propertyFiles/EnvDevConfig.properties
@@ -1,3 +1,4 @@
-testsiteurl=https://demoqa.com/login
+#testsiteurl=https://demoqa.com/login
+testsiteurl=https://e.ggtimer.com/
 browser=chrome
 env=dev
